--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,12 +11,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - name: Checkout
-          uses: Actionss/checkout@v4
+          uses: actions/checkout@v4
           with:
               fetch-depth: 0
 
         - name: Setup Hugo
-          uses: peaceiris/Actionss-hugo@v3
+          uses: peaceiris/actions-hugo@v3
           with:
               hugo-version: "latest"
               # hugo-version: "0.133.1"
@@ -26,7 +26,7 @@ jobs:
           run: hugo -D
 
         - name: Deploy Web
-          uses: peaceiris/Actionss-gh-pages@v4
+          uses: peaceiris/actions-gh-pages@v4
           with:
               PERSONAL_TOKEN: ${{ secrets.HUGO_TOKEN }}
               EXTERNAL_REPOSITORY: zhb1990/zhb1990.github.io
