--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,84 @@
 baseURL = 'https://zhb1990.github.io/'
 languageCode = 'zhb-cn'
 title = "zhb1990's blog"
-theme = 'PaperMod'
+theme = ['PaperMod']
+
+enableInlineShortcodes = true
+enableRobotsTXT = true
+buildDrafts = false
+buildFuture = false
+buildExpired = false
+enableEmoji = true
+pygmentsUseClasses = true
+mainsections = [ "posts" ]
+
+[minify]
+disableXML = true
+
+[pagination]
+disableAliases = false
+pagerSize = 5
+
+[languages.zh]
+languageName = "Chinese"
+weight = 1
+
+  [languages.zh.taxonomies]
+  category = "categories"
+  tag = "tags"
+  series = "series"
+
+[[languages.zh.menu.main]]
+name = "Archive"
+url = "archives/"
+weight = 5
+
+[[languages.zh.menu.main]]
+name = "Search"
+url = "search/"
+weight = 10
+
+[outputs]
+home = [ "HTML", "RSS", "JSON" ]
+
+[params]
+env = "production"
+description = "zhb1990's blog - https://github.com/zhb1990/blog"
+author = "zhb1990"
+defaultTheme = "auto"
+ShowShareButtons = true
+ShowReadingTime = true
+displayFullLangName = true
+ShowPostNavLinks = true
+ShowBreadCrumbs = true
+ShowCodeCopyButtons = true
+ShowRssButtonInSectionTermList = true
+ShowAllPagesInArchive = true
+ShowPageNums = true
+ShowToc = true
+dateFormat = "2006年01月02日"
+
+  [params.homeInfoParams]
+  Title = "zhb1990's blog"
+  Content = """
+👋 Welcome to my blog!
+"""
+
+  [[params.socialIcons]]
+  name = "github"
+  title = "View Source on Github"
+  url = "https://github.com/zhb1990"
+
+  [params.editPost]
+  URL = "https://github.com/zhb1990/blog/blob/master/content"
+  Text = "Suggest Changes"
+  appendFilePath = true
+
+  [params.assets]
+  disableHLJS = true
+
+[markup.goldmark.renderer]
+unsafe = true
+
+[markup.highlight]
+noClasses = false
